commit por maria

--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,5 +1,40 @@
-<div class="max-w-md mx-auto mt-10 p-6 bg-white shadow-md rounded-2xl">
-    <h2 class="text-2xl font-bold mb-6 text-center">Iniciar sesión</h2>
+<div class="container mt-5">
+  <div class="row justify-content-center">
+    <div class="col-md-8">
+      <form [formGroup]="loginForm">
+        <!-- Email input -->
+        <div data-mdb-input-init class="form-outline mb-4">
+          <input formControlName="email" name="email" type="email" class="form-control"/>
+          <label class="form-label" for="form2Example1">Email *</label>
+          @if (loginForm.get('email')?.invalid && loginForm.get('email')?.touched) {
+            <div class="text-danger">
+              El email no es válido
+            </div>
+          }
+        </div>
 
-    <p>¿Aún no tienes cuenta? Regístrate <a routerLink="/register">aquí</a></p>
+        <!-- Password input -->
+        <div data-mdb-input-init class="form-outline mb-4">
+          <input formControlName="password" name="password" type="password"  class="form-control"/>
+          <label class="form-label" for="form2Example2">Contraseña</label>
+          @if (loginForm.get('password')?.invalid && loginForm.get('password')?.touched) {
+            <div class="text-danger">
+              La contraseña es obligatoria
+            </div>
+          }
+        </div>
+
+        <!-- Submit button -->
+        <button (click)="onSubmit()" type="submit" data-mdb-button-init data-mdb-ripple-init class="btn btn-primary btn-block mb-4">Iniciar sesión
+        </button>
+        <div class="text-center">
+          <p>¿No tienes cuenta? <a routerLink="/register">Regístrate</a></p>
+        </div>
+
+
+      </form>
+    </div>
+  </div>
 </div>
+
+
