--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -4,7 +4,7 @@
             <div class="card shadow">
                 <div class="card-body">
                     <button type="button" class="btn p-0" routerLink="/login">
-                        &lt; Volver al login
+                      <p><a routerLink="/login">&lt;Volver al login</a></p>
                     </button>
 
                     <h3 class="text-center mb-4">Registro</h3>
